--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
         /* Main Container */
         main {
-            max-width: 90%;
-            margin: 20px auto;
+            max-width: 900px;
+            margin: 30px auto;
             padding: 20px;
             background: #f9f9f9;
             border-radius: 8px;
@@ -46,7 +46,6 @@
         /* Profile Container */
         .profile-container {
             display: flex;
-            flex-wrap: wrap;
             align-items: flex-start;
             margin-bottom: 30px;
             text-align: left;
@@ -56,7 +55,7 @@
             border-radius: 5px;
             width: 150px;
             height: auto;
-            margin-bottom: 15px;
+            margin-right: 20px;
         }
 
         .profile-links {
@@ -96,28 +95,23 @@
 
         /* Responsive Design for Mobile */
         @media (max-width: 768px) {
-            main {
-                padding: 15px;
-            }
-
             .profile-container {
                 flex-direction: column;
+                align-items: flex-start;
             }
 
             .profile-container img {
                 margin-bottom: 20px;
+                margin-right: 0; /* Remove margin-right for mobile */
             }
 
             .profile-container div {
                 max-width: 100%;
             }
 
-            .profile-title {
-                font-size: 1.3em;
-            }
-
-            .profile-subtitle {
-                font-size: 1em;
+            main {
+                max-width: 95%;
+                padding: 15px;
             }
         }
     </style>
