Add GitHub link

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                     <ul>
                         <li><a href="https://scholar.google.com/citations?user=Ca3-le8AAAAJ&hl=en" target="_blank">Google Scholar</a></li>
                         <li><a href="https://arxiv.org/a/diaz_i_2.html" target="_blank">arXiv</a></li>
+                        <li><a href="https://github.com/idiazst" target="_blank">GitHub</a></li>li>
                         <li><a href="https://x.com/ildiazm?lang=en" target="_blank">Twitter</a></li>
                         <li><a href="https://bsky.app/profile/idiaz.bsky.social" target="_blank">Bluesky</a></li>
                     </ul>
