--- a/team.html
+++ b/team.html
@@ -91,7 +91,7 @@
             </ul>
         </section>
 	<section>
-            <h2>Major Collaborators (Past and Current)</h2>
+            <h2>Frequent Collaborators (Past and Current)</h2>
             <ul>
                 <li><a href="https://kararudolph.github.io/"
                        target="_blank">Kara Rudolph</a></li>
