--- a/team.html
+++ b/team.html
@@ -71,6 +71,7 @@
                 <li>Leo Segovia</li>
                 <li>Jiacheng Ge</li>
                 <li>Xinyi (Emily) Zhang</li>
+		<li><a href="https://cds.nyu.edu/team/jiayi-cheng/">Jiayi Cheng</a></li>
             </ul>
         </section>
         <section>
@@ -101,6 +102,8 @@
                 target="_blank">Edward Schenck</a></li>
                 <li><a href="https://brainandmind.weill.cornell.edu/ctnu-director-dr-hooman-kamel"
                 target="_blank">Hooman Kamel</a></li>
+		<li><a href="https://www.wenbowu.me/"
+                target="_blank">Wenbo Wu</a></li>
             </ul>
         </section>
 
